--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>groupId</groupId>
     <artifactId>LearnJava</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>web-service</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>1.10</maven.compiler.source>
